name:                cardano-sl-arbitrary
version:             0.2.0
synopsis:            Cardano SL arbitrary generators
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        Pos.Block.Arbitrary
  build-depends:        derive
                      , cardano-sl
  hs-source-dirs:       ../src
  default-language:     Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2                       
